--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
-    "phantom-html-to-pdf": "^0.5.0"
+    "phantom-html-to-pdf": "^0.5.0",
+    "phantomjs-prebuilt": "^2.1.14"
   }
 }
